# chaseos

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: release_smoke.txt  startup_smoke.txt  wallpaper_smoke.txt
phases/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9 markdown.txt  9.txt
src/chaseos/: __init__.py  __main__.py
src/chaseos/ai/: __init__.py  improv_client.py
src/chaseos/app/: __init__.py  app_state.py  command_router.py  headless.py  readiness.py  release_info.py  support_export.py  terminal_window.py  tray_app.py
src/chaseos/interpretation/: __init__.py  checkin_interpreter.py  practical_signals.py  safety_rules.py
src/chaseos/memory/: __init__.py  feedback_store.py  learned_preferences.py
src/chaseos/models/: __init__.py  assets.py  checkin.py  memory.py  monitor.py  poster.py  ritual.py  settings.py  (+2 more)
tests/integration/: test_poster_public_safety.py  test_startup_sequence.py  test_wallpaper_photo_composer.py  test_wallpaper_render_outputs.py
tests/unit/: test_art_renderer.py  test_checkin_interpreter.py  test_command_router.py  test_headless.py  test_hybrid_wallpaper_renderer.py  test_improv_flow.py  test_monitor_models.py  test_monitor_roles.py  test_photo_indexer.py  test_photo_selector.py  test_poster_renderer.py  test_poster_safety.py  test_quote_engine.py  test_readiness.py  test_redaction.py  test_startup_sequence_unit.py  test_theme_generator.py  test_timer.py  test_verse_selector.py  test_wallpaper_apply.py  test_windows_operation.py
(+49 files in other folders)
