[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaseos"
version = "0.1.0"
description = "On-demand Windows tray ritual app with a terminal-style startup console."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Chase Cole" }
]
dependencies = [
  "PySide6>=6.7",
  "Pillow>=10.4",
  "pydantic>=2.7",
  "comtypes>=1.4; platform_system == 'Windows'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[project.scripts]
chaseos = "chaseos.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
